--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,1 +1,7 @@
 storage_path: "./storage.db"
+env: "prod"
+http_server:
+  address: "localhost:8088"
+  timeout: 4s
+  idle_timeout: 30s
+  user: "Shabby8574"
